adjust css file path
adjust css file path

--- a/The Space Station Project/CSS/menu_rollover.css
+++ b/The Space Station Project/CSS/menu_rollover.css
@@ -38,5 +38,35 @@ body {
     border-radius: 1.5px;
     background-color: #387593;
     cursor: pointer;
+}
 
+.menu li:hover {
+    background-color: #5EAFDF;
+    color: #FFF;
+}
+
+.menu li:hover ul {
+    display: block;
+    opacity: 1;
+    /*While hovered, drop down-menu appears
+    This also avoid a block-level bug */
+    visibility: visible;
+}
+
+.submenu {
+    padding: 0;
+    left: 0;
+    position: absolute;
+    top: 43.5px;
+    width: 125.5px;
+    opacity: 0;
+    /* While not being hovered, drop down-menu hides
+    This also avoids a block_level bug */
+    visibility: hidden;
+}
+
+.submenu li {
+    background-color: #387593;
+    display: block;
+    color: #B3B3B3;
 }
