--- a/The Space Station Project/CSS/shares.css
+++ b/The Space Station Project/CSS/shares.css
@@ -297,6 +297,7 @@ CONTACT STYLES
 .terms {
     margin: 30px 1px 0 0;
     padding-left: 52px;
+    padding-top: 20px;
     font-size: 14px;
     line-height: 5px;
     color: #000;
